// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`finish() when there are incomplete results using npm should return the expected results and emit the expected events: incomplete > npm > emit args 1`] = `
Array [
  Array [
    "finish/start",
    Object {},
  ],
  Array [
    "finish/incomplete",
    Object {
      "incomplete": Array [
        Object {
          "name": "updtr-test-module-1",
          "rollbackTo": "1.0.0",
          "success": true,
          "updateTo": "^1.0.0",
        },
        Object {
          "name": "updtr-test-module-2",
          "rollbackTo": "2.0.0",
          "success": true,
          "updateTo": "^2.0.0",
        },
      ],
    },
  ],
  Array [
    "finish/list-incomplete",
    Object {
      "cmd": "npm ls --json --depth=0 updtr-test-module-1 updtr-test-module-2",
    },
  ],
  Array [
    "finish/end",
    Object {
      "results": Array [
        Object {
          "name": "updtr-test-module-1",
          "rollbackTo": "1.0.0",
          "success": true,
          "updateTo": "2.0.0",
        },
        Object {
          "name": "updtr-test-module-1",
          "rollbackTo": "1.0.0",
          "success": true,
          "updateTo": "2.0.0",
        },
        Object {
          "name": "updtr-test-module-2",
          "rollbackTo": "2.0.0",
          "success": true,
          "updateTo": "2.1.1",
        },
        Object {
          "name": "updtr-test-module-2",
          "rollbackTo": "2.0.0",
          "success": true,
          "updateTo": "2.1.1",
        },
      ],
    },
  ],
]
`;

exports[`finish() when there are incomplete results using npm should return the expected results and emit the expected events: incomplete > npm > exec args 1`] = `
Array [
  Array [
    "npm ls --json --depth=0 updtr-test-module-1 updtr-test-module-2",
  ],
]
`;

exports[`finish() when there are incomplete results using npm should return the expected results and emit the expected events: incomplete > npm > results 1`] = `
Array [
  Object {
    "name": "updtr-test-module-1",
    "rollbackTo": "1.0.0",
    "success": true,
    "updateTo": "2.0.0",
  },
  Object {
    "name": "updtr-test-module-1",
    "rollbackTo": "1.0.0",
    "success": true,
    "updateTo": "2.0.0",
  },
  Object {
    "name": "updtr-test-module-2",
    "rollbackTo": "2.0.0",
    "success": true,
    "updateTo": "2.1.1",
  },
  Object {
    "name": "updtr-test-module-2",
    "rollbackTo": "2.0.0",
    "success": true,
    "updateTo": "2.1.1",
  },
]
`;

exports[`finish() when there are incomplete results using yarn should return the expected results and emit the expected events: incomplete > yarn > emit args 1`] = `
Array [
  Array [
    "finish/start",
    Object {},
  ],
  Array [
    "finish/incomplete",
    Object {
      "incomplete": Array [
        Object {
          "name": "updtr-test-module-1",
          "rollbackTo": "1.0.0",
          "success": true,
          "updateTo": "^1.0.0",
        },
        Object {
          "name": "updtr-test-module-2",
          "rollbackTo": "2.0.0",
          "success": true,
          "updateTo": "^2.0.0",
        },
      ],
    },
  ],
  Array [
    "finish/list-incomplete",
    Object {
      "cmd": "yarn list --json --depth=0 updtr-test-module-1 updtr-test-module-2",
    },
  ],
  Array [
    "finish/end",
    Object {
      "results": Array [
        Object {
          "name": "updtr-test-module-1",
          "rollbackTo": "1.0.0",
          "success": true,
          "updateTo": "2.0.0",
        },
        Object {
          "name": "updtr-test-module-1",
          "rollbackTo": "1.0.0",
          "success": true,
          "updateTo": "2.0.0",
        },
        Object {
          "name": "updtr-test-module-2",
          "rollbackTo": "2.0.0",
          "success": true,
          "updateTo": "2.1.1",
        },
        Object {
          "name": "updtr-test-module-2",
          "rollbackTo": "2.0.0",
          "success": true,
          "updateTo": "2.1.1",
        },
      ],
    },
  ],
]
`;

exports[`finish() when there are incomplete results using yarn should return the expected results and emit the expected events: incomplete > yarn > exec args 1`] = `
Array [
  Array [
    "yarn list --json --depth=0 updtr-test-module-1 updtr-test-module-2",
  ],
]
`;

exports[`finish() when there are incomplete results using yarn should return the expected results and emit the expected events: incomplete > yarn > results 1`] = `
Array [
  Object {
    "name": "updtr-test-module-1",
    "rollbackTo": "1.0.0",
    "success": true,
    "updateTo": "2.0.0",
  },
  Object {
    "name": "updtr-test-module-1",
    "rollbackTo": "1.0.0",
    "success": true,
    "updateTo": "2.0.0",
  },
  Object {
    "name": "updtr-test-module-2",
    "rollbackTo": "2.0.0",
    "success": true,
    "updateTo": "2.1.1",
  },
  Object {
    "name": "updtr-test-module-2",
    "rollbackTo": "2.0.0",
    "success": true,
    "updateTo": "2.1.1",
  },
]
`;
